implement basic version of the brigadier command system